# HackITAll-App

./: .gitignore  README.md  package-lock.json
rusty-api/: .env  Cargo.toml  docker-compose.yaml  prometheus.yaml
rusty-api/src/: main.rs
rusty-api/src/blockchain/: blockchain.rs
rusty-api/src/models/: mod.rs  transaction_model.rs  user_model.rs
rusty-api/src/repository/: mongodb_repo.rs  mongodb_repo_trans.rs
template-nuxtjs/: Dockerfile 2  README.md  nuxt.config.js  package-lock.json  package.json
template-nuxtjs/components/: Chat.vue
template-nuxtjs/layouts/: default.vue  no-layout.vue
template-nuxtjs/pages/: AddFunds.vue  Assistent.vue  Login.vue  Marketplace.vue  NFC.vue  Offerts.vue  Payments.vue  Profile.vue  Signup.vue  Statistics.vue  StockMarketEx.vue  index.vue
