[package]
name = "rusty-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
sha2 = "0.10.6"
chrono = "0.4.24"
systemstat = "0.2.3"
prometheus = "0.13.3"
actix-web-prom = "0.6.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
base64 = "0.21.0"
